<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Mapa</string>
    <string name="action_refresh">Atualizar</string>
    <string name="action_share">Compartilhar</string>
    <string name="title_activity_detail">Detalhes</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">pbenavalli.example.com</string>
    <string name="content_authority">com.example.pbenavalli.campitempo</string>

    <!-- Example General settings -->
    <string name="pref_header_city_title">Cidade</string>
    <string name="pref_header_city_key">cidade</string>
    <string name="pref_header_city_default">Campinas</string>
    <string name="pref_header_unit_key">unidade</string>
    <string name="pref_header_unit_title">Unidade</string>
    <string name="pref_header_unit_default">metric</string>
    <string-array name="pref_header_unit_entries">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="pref_header_unit_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>


    <string name="pref_header_general">OI</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> Max: <xliff:g id="high">%2$s</xliff:g> Min: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Notificações de Previsão</string>
    <string name="pref_enable_notifications_true">Ativo</string>
    <string name="pref_enable_notifications_false">Inativo</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="test_expresso">Today, May 26</string>
    <string name="test_expresso_not">Never, May 26</string>
    <string name="test_expresso_part">Rain</string>
    <string name="test_expresso_rain">Rain</string>

</resources>
